디자인변경

--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -82,7 +82,12 @@ table{width:100%;border-collapse:collapse;}
 
 /*테이블*/
 .basic_table_column_1 {
-
+	th{
+		
+	}
+	th, td{
+		height:25px;
+	}
 }
 
 .header_logo img{width:85px;}
