테이블 디자인

--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -20,7 +20,7 @@ table{width:100%;border-collapse:collapse;}
 		margin-bottom:20px;
 		.col {
 			>.tit_2{
-				margin:0 -10px;
+				margin:0 -10px 20px;
 			}
 			background-color:#efefef;
 			border:1px solid #bfbfbf;
@@ -81,12 +81,64 @@ table{width:100%;border-collapse:collapse;}
 }
 
 /*테이블*/
-.basic_table_column_1 {
-	th{
-		
+th{
+	height:35px;
+	background-color:#395971;
+	color:#fff;
+}
+td {
+	background:#fafafa;
+	padding:0 10px;
+	border-bottom:1px solid #eee;
+	&.ta_l{
+		text-align:left;
 	}
-	th, td{
-		height:25px;
+	&.ta_r{
+		text-align:right;
+	}
+	&.ta_c{
+		text-align:center;	
+	}
+}
+.basic_table_column_1 {
+	border:1px solid #ccc;
+	border-radius:2px;
+	overflow:hidden;
+	margin-bottom:20px;
+	td{
+		height:30px;
+	}
+	.dataTables_scrollHead {
+		th{
+			position:relative;
+			&:before{
+				content:"";
+				display:inline-block;
+				position:absolute;
+				left:0;
+				bottom:0;
+				width:1px;
+				height:8px;
+				background-color:#efefef;
+			}
+			&:first-child{
+				&:before{
+					content:none;
+				}
+			}
+			&:last-child{
+		
+				&:after{
+					content:"";
+					width:20px;
+					height:35px;
+					background:#395971;
+					position:absolute;
+					top:0;
+					right:-20px;
+				}
+			}
+		}
 	}
 }
 
