--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -24,8 +24,7 @@
 /*//d_prd_mng_4*/
 /*d_prd_mng_5*/
 .d_prd_mng_5_con{
-	width:35%;
-	float:left;
+	height:240px;
 	margin-left:10px;
 	border:1px solid #bfbfbf;
 	padding:5px 5px 115px;
