--- a/project/src/guide/css/guide.css
+++ b/project/src/guide/css/guide.css
@@ -9,7 +9,7 @@ body{padding:100px 0;min-width:1024px;}
 #header ul a{color:#fff;display:block;height:30px;line-height:30px;text-align:center;overflow:hidden;white-space:nowrap;}
 #header ul a.on{background-color:#efefef;color:#333;font-weight:bold;}
 
-#container{padding:0 20px;}
+#container{padding:0 20px;background-color:#fff;}
 .guide_table{clear:both;}
 .guide_table th, .guide_table td{height:30px;text-align:center;border:1px solid #aaa;}
 .guide_table tr.cat td{border-top:2px solid #000;}
