--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -101,6 +101,7 @@ td {
 	background:#fafafa;
 	padding:0 10px;
 	border-bottom:1px solid #eee;
+	text-align:center;
 	&.ta_l{
 		text-align:left;
 	}
@@ -326,7 +327,7 @@ span {
 .tit_2{
 	font-size:15px;
 	color:#2c4965;
-	font-weight:500;
+	font-weight:600;
 }
 
 #sub_wrap{
