--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -28,7 +28,13 @@
 	margin-left:10px;
 	border:1px solid #bfbfbf;
 	padding:5px 5px 115px;
-  border-radius:5px;}
+  border-radius:5px;
+}
+.d_5_table{
+	th, td{
+		text-align:center;
+	}
+}
 .d_prd_mng_5_label{
 	display:inline-block;
 	width:80px;
