[창호]1일차수정본

--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -10,10 +10,25 @@
 .ml12{
   margin-left: -12px!important;
 }
+.pr33{
+  padding-right: 33px!important;
+}
+.pr26{
+  padding-right:26px!important;
+}
+.pl40{
+  padding-left: 40px!important;
+}
+.mml_50{
+  margin-left: -20px;
+  margin-top: 5px;
+}
 input[type=text] {
     text-align: right;
 }
-
+.grid .col_7{
+  width: auto;
+}
 .row_box_wrap {
     margin: 0 auto;
     padding-left: 186px;
