[창호]e_mat_mng_3html 완

--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -21,13 +21,16 @@
 }
 .mml_50{
   margin-left: -20px;
-  margin-top: 5px;
+  margin-top: 3px;
 }
 input[type=text] {
     text-align: right;
 }
 .grid .col_7{
-  width: auto;
+  width: 100%;
+}
+.basic_table_row_1 .mw135{
+  min-width: 135px;
 }
 .row_box_wrap {
     margin: 0 auto;
