[강림]작업중

--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -1,4 +1,11 @@
 @charset "utf-8";
+/*d_prd_mng_2*/
+.d_2_w{width:85% !important;}
+.d_2_left{
+	float:left;
+	width:50%;
+}
+/*//d_prd_mng_2*/
 /*d_prd_mng_4*/
 .basic_table_row_1{
 	th,td{
