[창호]e_mat_mng_3.html,e_mat_mng_4.html 완

--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -23,6 +23,12 @@
   margin-left: -20px;
   margin-top: 3px;
 }
+.frm_w_1_w{
+  width: 90px!important;
+}
+.frm_w_1_w2{
+  width: 160px!important;
+}
 input[type=text] {
     text-align: right;
 }
