[강림]공정별작업지시공정표 페이지 완성, 가이드 인덱스 수정

--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -63,3 +63,16 @@
 #produc_code_1_2{width:94px;}
 #produc_code_1_3{width:221px;}
 /*//d_prd_mng_5*/
+/*d_prd_mng_8*/
+.tit_2 .tit_bd_wrap{
+	text-align:center;
+	width:500px;
+	margin:0 auto;
+	padding-left: 10px;
+	display: block;
+	border-bottom: 1px solid #c3c3c3;
+	padding-bottom: 8px;
+}
+.d_8_margin{margin:0 0 15px 70px;}
+.d_2_table{width:300px;float:right;}
+/*//d_prd_mng_8*/
