--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -1,16 +1,20 @@
 @charset "utf-8";
-/*d_prd_mng_2*/
-#sub_wrap.d_2_wrap{
+#sub_wrap.d_wrap{
 	width:1200px;
 }
-.frm_w_1_d2{width:80px !important;}
 .fl_left{float:left;}
+.fl_right{float:right;}
+.c_b{clear:both;}
+
+/*d_prd_mng_2*/
+.frm_w_1_d2{width:80px !important;}
 .d_2_left{
 	float:left;
 	width:50%;
 }
 .grid .row>.section_1>.d_2_pb{padding-bottom:20px;}
 /*//d_prd_mng_2*/
+
 /*d_prd_mng_4*/
 .d_4_table{
 	th,td{
@@ -34,6 +38,7 @@
 	}
 }
 /*//d_prd_mng_4*/
+
 /*d_prd_mng_5*/
 .d_prd_mng_5_con{
 	height:240px;
@@ -63,6 +68,12 @@
 #produc_code_1_2{width:94px;}
 #produc_code_1_3{width:221px;}
 /*//d_prd_mng_5*/
+
+/*d_prd_mng_6*/
+.d_6_margin{margin:5px;}
+.grid .row>.section_1>.d_6_pb{padding-bottom:3px;}
+/*//d_prd_mng_6*/
+
 /*d_prd_mng_8*/
 .tit_2 .tit_bd_wrap{
 	text-align:center;
