출하검사등록화면 수정내용입니다

--- a/project/src/sass/f_qua_mng.scss
+++ b/project/src/sass/f_qua_mng.scss
@@ -71,12 +71,14 @@ input[type=text] {
 }
 
 .qua_mng_top_3 {
-    margin-left: -52px;
+   
     span {
         padding: 0 7px 0 8px;
     }
 }
-
+.qua_mng_top_4{
+    margin-left: 52px;
+}
 .circle_rb_2 {
     display: block;
     background-color: red;
