거래처별제품관리 HTML

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -16,3 +16,76 @@
 		margin: 0 7px;
 	}
 }
+.l_wrap{
+	float: left;
+	>.section_1 {
+			margin-bottom:20px;
+			>.col {
+				>.tit_2{
+					margin:0 -10px 20px;
+				}
+				background-color:#efefef;
+				border:1px solid #bfbfbf;
+				padding:20px 20px 0;
+				border-radius:5px;
+				position:relative;
+			}
+		}
+}
+.r_wrap{
+	float: right;
+	>.section_1 {
+			margin-bottom:20px;
+			>.col {
+				>.tit_2{
+					margin:0 -10px 20px;
+				}
+				background-color:#efefef;
+				border:1px solid #bfbfbf;
+				padding:20px 20px 0;
+				border-radius:5px;
+				position:relative;
+			}
+		}
+}
+.basic_table_column_1 {
+	border:1px solid #ccc;
+	border-radius:2px;
+	overflow:hidden;
+	margin-bottom:20px;
+	td{
+		height:30px;
+	}
+	.dataTables_scrollHead {
+		th{
+			position:relative;
+			&:before{
+				content:"";
+				display:inline-block;
+				position:absolute;
+				left:0;
+				bottom:0;
+				width:1px;
+				height:8px;
+				background-color:#efefef;
+			}
+			&:first-child{
+				&:before{
+					content:none;
+				}
+			}
+			&:last-child{
+		
+				&:after{
+					content:"";
+					width:20px;
+					height:35px;
+					background:#395971;
+					position:absolute;
+					top:0;
+					right:-20px;
+				}
+			}
+		}
+	}
+}
