--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -91,4 +91,6 @@
 /*d_prd_mng_9*/
 .d_9_txt_c{text-align:center;}
 .d_9_mt{margin-top:20px;}
+.d_9_w1{width:100px;}
+.d_9_w2{width:50px;}
 /*//d_prd_mng_9*/
