--- a/project/src/sass/g_out_mng.scss
+++ b/project/src/sass/g_out_mng.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+/* g_out_mng_1 */
 .g_out_1_mgr{
 	margin-right: 26px;
 }
@@ -29,3 +30,17 @@
 .widht80 {
     width: 80%;
 }
+/* //g_out_mng_1*/
+
+/* g_out_mng_2*/
+
+.table_1{
+    table{
+        th{
+            font-size: 12px;
+            padding: 5px 10px 6px 10px;
+        }
+    }
+}
+
+.tag_tit{margin-top: 10px;}
