[강림]너비값 수정

--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -183,6 +183,7 @@
 /*d_prd_mng_6*/
 .d_6_margin{margin:5px;}
 .grid .row>.section_1>.d_6_pb{padding-bottom:3px;}
+#produc_code_1_1.d_6_w,#produc_code_1_2.d_6_w{width:73px;}
 /*//d_prd_mng_6*/
 
 /*d_prd_mng_8*/
