--- a/project/src/sass/h_cmn_pop.scss
+++ b/project/src/sass/h_cmn_pop.scss
@@ -17,3 +17,10 @@
   padding-bottom: 155px!important;
 }
 // 창호꺼
+
+/*강림*/
+/*h_cmm_pop_6*/
+.h_6_ml{margin-left:50px;}
+
+/*//h_cmm_pop_6*/
+/*//강림*/
