--- a/project/src/sass/f_qua_mng.scss
+++ b/project/src/sass/f_qua_mng.scss
@@ -53,8 +53,9 @@ input[type=text] {
         border-bottom: 1px solid #000;
     }
 }
-.qua_mng_top_4{
-    label{
+
+.qua_mng_top_4 {
+    label {
         margin-right: 52px;
     }
 }
@@ -67,6 +68,36 @@ input[type=text] {
 /* //f_qua_mag_1.css */
 
 
+/*f_qua_mag_1.css*/
+
+.f_qua_mng_2_1 {
+    label {
+        margin-right: 33px;
+    }
+}
+
+.f_qua_mng_2_2 {
+    label {
+        margin-right: 13px;
+    }
+}
+
+.f_qua_radio {
+    p {
+        margin-left: -60px;
+        +p {
+            margin-top: 10px;
+        }
+    }
+    span {
+        margin-left: -5px;
+    }
+}
+
+
+/*//f_qua_mag_1.css*/
+
+
 /* f_qua_mag_3.css */
 
 .qua_mng_top_1 {
@@ -76,14 +107,13 @@ input[type=text] {
 }
 
 .qua_mng_top_3 {
-
     span {
         padding: 0 7px 0 8px;
     }
 }
-.qua_mng_top_4{
 
-}
+.qua_mng_top_4 {}
+
 .circle_rb_2 {
     display: block;
     background-color: red;
@@ -92,8 +122,9 @@ input[type=text] {
     border-radius: 10px;
     margin: 0 auto;
 }
-.circle_gb_2{
-	display: block;
+
+.circle_gb_2 {
+    display: block;
     background-color: green;
     width: 20px;
     height: 20px;
@@ -103,24 +134,21 @@ input[type=text] {
 
 
 /* //f_qua_mag_3.css */
-.f_qua_mng_2_1{
-    label{
-        margin-right: 33px;
+/* //f_qua_mag_4.css */
+.f_qua_wrap{
+    padding-left: 80px !important;
+}
+.textAlingL {
+    text-align: left;
+    .inputwidth{
+        width: 203px;
     }
 }
-.f_qua_mng_2_2{
-    label{
-        margin-right: 13px;
-    }
+.f_qua_tit2{
+    margin: 20px 0 5px 0;
+    font-size: 14px;
 }
-.f_qua_radio{
-    p{
-        margin-left: -60px;
-        +p{
-            margin-top: 10px;
-        }
-    }
-    span{
-        margin-left: -5px;
-    }
+.f_qua_4_2{
+    padding-left: 30px !important;
 }
+/* //f_qua_mag_4.css */
