메뉴권한관리 페이지

--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -97,6 +97,16 @@ th{
 	background-color:#395971;
 	color:#fff;
 }
+.ta_l{
+	text-align:left;
+}
+.ta_r{
+	text-align:right;
+}
+.ta_c{
+		text-align:center;	
+}
+
 td {
 	background:#fafafa;
 	padding:0 10px;
