--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -319,7 +319,7 @@ span {
 #container{
 	background-color:#dcdcdc;
 }
-.sub_frame_st2{width:1280px !important;margin:0 auto;}
+
 .tit_1{
 	padding:10px 10px 0;
 	font-size:16px;
@@ -343,4 +343,5 @@ span {
 #sub_wrap{
 	width:1250px;
 	padding:20px;
+	margin:0 auto;
 }
