--- a/project/src/sass/sub_main_2.scss
+++ b/project/src/sass/sub_main_2.scss
@@ -19,3 +19,4 @@ html,body, #wrap{height:100%;overflow:hidden;background-color:#ececec;}
 #lnb_wrap{height:100%;width:180px;padding:110px 10px 10px;background-color:#628299;color:#fff;border:1px solid #dcdcdc;position:absolute;left:0;top:0;}
 #contents{width:100%;height:100%;background-color:#dcdcdc;padding-top:100px;}
 #contents>iframe{width:100%;height:100%;}
+.sub_frame_st2{/*width:1280px !important;margin:0 auto;*/}
