[김영은] 리셋후 다시백업파일 업데이트 - 영업

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -49,3 +49,21 @@
 			}
 		}
 }
+.txta{
+	resize:none;
+	border: 1px solid #DFDFDF;
+}
+.stock_wrap{
+	margin: 0 0 20px 25px;
+
+	p{
+		label{
+			display: inline-block;
+			width: 118px;
+		}
+	&:first-child+p{
+		margin-bottom: 15px;
+	}
+	}
+}
+
