--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -30,7 +30,7 @@ table.dataTable.nowrap th,table.dataTable.nowrap td {
 				border-radius:5px;
 		}
 		>.section_1 {
-			margin-bottom:20px;
+			margin-bottom:20px;		
 			>.col {
 				>.tit_2{
 					margin:0 -10px 20px;
@@ -39,9 +39,33 @@ table.dataTable.nowrap th,table.dataTable.nowrap td {
 				border:1px solid #bfbfbf;
 				padding:20px 20px 0;
 				border-radius:5px;
-				position:relative;
+				position:relative;				
 			}
 		}
+		.col {
+			&.noBd{
+				background-color:transparent;
+				border:none;
+				border-radius:0;
+				position:relative;
+				>.row {
+					margin:0 -20px;
+					>.section_1 {
+						>.col {
+							background-color:#efefef;
+							border:1px solid #bfbfbf;
+							padding:20px 20px 0;
+							border-radius:5px;
+							position:relative;				
+							>.tit_2{
+								margin:0 -10px 20px;
+							}							
+						}
+					}
+				}
+
+			}
+		} 
 		&:after{
 			content:"";
 			display:block;
@@ -67,6 +91,9 @@ table.dataTable.nowrap th,table.dataTable.nowrap td {
 	.col_5{
 		width:8.3333%*5;
 	}
+	.col_55{
+		width:8.3333%*5.5;
+	}	
 	.col_6{
 		width:8.3333%*6;
 	}
