--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -1,7 +1,5 @@
 @charset "utf-8";
-#story_p_c {
-	padding: 15px;
-}
+/*common*/
 .produc_sj{
 	label{
 		display: inline-block;
@@ -49,12 +47,66 @@
 			}
 		}
 }
+.ta_l{text-align: left}
+/*//common*/
+
+/*c_sal_mng_1*/
+.row_box_wrap {
+    margin: 0 auto;
+    padding-left: 186px;
+    .row_box {
+        margin-bottom: 30px;
+        p{
+        	width: 123px;
+        }
+    }
+    div >p {
+        height: 26px;
+        line-height: 26px;
+        float: left;
+        padding-right: 30px;
+        &:first-child{
+        	padding-right: 40px;
+        }
+    }
+    ul {
+        float: left;
+        padding-right: 40px;
+        +ul {
+            padding-right: 5px;
+        }
+        li {
+            height: 26px;
+            line-height: 26px;
+            +li+li {
+               position: relative;
+                .circle_rb {
+                    display: block;
+                    background-color: red;
+                    width: 20px;
+                    height: 20px;
+                    text-align: center;
+                    border-radius: 10px;
+                    position: absolute;
+                    top: 5px;
+                    left: 38px;
+                }
+            }
+        }
+    }
+}
+.row_box_wrap .d_1_pr1{padding-right:36px;}
+.row_box_wrap .d_1_pr2{padding-right:22px;}
+/*//c_sal_mng_1*/
+
+/*c_sal_mng_3*/
 .txta{
 	resize:none;
 	border: 1px solid #DFDFDF;
+	width: 100%;
 }
 .stock_wrap{
-	margin: 0 0 20px 25px;
+	margin: 0 0 20px 13px;
 
 	p{
 		label{
@@ -66,4 +118,10 @@
 	}
 	}
 }
+.frm_w_6 {
+	width: 105px !important;
+	margin-right: 11px;
+}
+/*//c_sal_mng_3*/
+
 
