--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -227,6 +227,20 @@ td {
 	}
 }
 
+.chTable {
+	display: table;
+	.chRow {
+		display: table-row;
+		.chTd{
+			&.th{
+				padding-right: 10px;	
+			}			
+			display: table-cell;
+			padding-bottom:3px;
+		}
+	}
+}
+
 /*버튼*/
 form{
 	&.pos_r{
@@ -344,6 +358,34 @@ span {
 		}
 	}
 }
+.mr_5{margin-right:5px;}
+.mr_10{margin-right:10px;}
+.mr_15{margin-right:15px;}
+.mr_20{margin-right:20px;}
+.mr_25{margin-right:25px;}
+.mr_30{margin-right:30px;}
+
+.ml_5{margin-left:5px;}
+.ml_10{margin-left:10px;}
+.ml_15{margin-left:15px;}
+.ml_20{margin-left:20px;}
+.ml_25{margin-left:25px;}
+.ml_30{margin-left:30px;}
+
+.pr_5{padding-right:5px;}
+.pr_10{padding-right:10px;}
+.pr_15{padding-right:15px;}
+.pr_20{padding-right:20px;}
+.pr_25{padding-right:25px;}
+.pr_30{padding-right:30px;}
+
+.pl_5{padding-left:5px;}
+.pl_10{padding-left:10px;}
+.pl_15{padding-left:15px;}
+.pl_20{padding-left:20px;}
+.pl_25{padding-left:25px;}
+.pl_30{padding-left:30px;}
+
 .mml_50{margin-left:-50px;}
 
 .frm_w_1 {width:100% !important;}
