--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -290,7 +290,9 @@ div[class*="btn_row_"]{
 		padding-right:5px;
 	}
 }
-
+.btn_upload{
+	padding:4px 10px 3px 10px;	
+}
 /*폼양식*/
 .btn_search{
 	width:24px;
@@ -402,6 +404,17 @@ span {
 .pl_25{padding-left:25px;}
 .pl_30{padding-left:30px;}
 
+.plr_5{padding-left:5px;padding-right:5px;}
+.plr_10{padding-left:10px;padding-right:10px;}
+.plr_15{padding-left:15px;padding-right:15px;}
+.plr_20{padding-left:20px;padding-right:20px;}
+.plr_25{padding-left:25px;padding-right:25px;}
+.plr_30{padding-left:30px;padding-right:30px;}
+
+.ptb_5{padding-top:5px;padding-bottom:5px;}
+.ptb_10{padding-top:10px;padding-bottom:10px;}
+.ptb_15{padding-top:15px;padding-bottom:15px;}
+.ptb_20{padding-top:20px;padding-bottom:20px;}
 .mml_50{margin-left:-50px;}
 
 .frm_w_1 {width:100% !important;}
