[창호] 패딩값 이상한거 조금수정

--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 // e_mat_mng_1
 /* f_qua_mag_1.css */
+.pl5{
+  padding-left: 5px!important;
+}
 .pr55{
   padding-right: 55px!important;
 }
