--- a/project/src/sass/i_stat_als_sch.scss
+++ b/project/src/sass/i_stat_als_sch.scss
@@ -15,9 +15,9 @@
 .pl15{
   padding-left: 15px;
 }
-.tr{
-  text-align: right!important;
+.pr39{
+  padding-right: 39px!important
 }
-.tl{
-  text-align: left!important;
+.pt28{
+  padding-top: 26px!important;
 }
