[김영은]i_stat_als(15~18)+guideIndex,영업코딩전체수정

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -126,7 +126,7 @@
 	margin-right: 11px;
 }
 .frm_w_7 {
-	width: 123px !important;
+	width: 150px !important;
 	margin-right: 11px;
 }
 /*//c_sal_mng_3*/
@@ -154,9 +154,17 @@ form{
 
 /*//c_sal_mng_7*/
 .frm_sel_1_1{
-	width: 123px;
+	width: 150px;
 	border: 1px solid #DFDFDF;
 	padding: 2px 0;
 	color: #A9A9A9;
 }
 /*//c_sal_mng_7*/
+/*i_stat_als_18*/
+.i_wd{
+	label{
+		width: 72px;
+		display: inline-block;
+	}
+}
+/*//i_stat_als_18*/
