[강림]통계분석 (생산)목표(년도별)등록 페이지 완성, 통계분석 css수정, 인덱스 수정

--- a/project/src/sass/i_stat_als_sch.scss
+++ b/project/src/sass/i_stat_als_sch.scss
@@ -21,3 +21,13 @@
 .pt28{
   padding-top: 26px!important;
 }
+
+/*i_stat_als_4*/
+.i_4_w{
+	display:inline-block;
+	width:80px;
+}
+#produc_code_1_2.i_4_w_input{
+	width:155px;
+}
+/*//i_stat_als_4*/
