[성룡] 백그라운드 3 추가

--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -146,6 +146,10 @@ th{
 	}
 	&.bgColor_2{
 		background-color:#5c5c5c;		
+	}
+	&.bgColor_3{
+		background-color: #ddd;
+		color: #2c496f;
 	}	
 }
 .ta_l{
