[김영은] 통계자료 수정

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -160,11 +160,14 @@ form{
 	color: #A9A9A9;
 }
 /*//c_sal_mng_7*/
-/*i_stat_als_18*/
+/*i_stat_als*/
 .i_wd{
 	label{
 		width: 72px;
 		display: inline-block;
 	}
 }
-/*//i_stat_als_18*/
+.mr_10{
+	margin-right: 10px;
+}
+/*//i_stat_als*/
