[정인용]common 수정

--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -146,12 +146,12 @@ th{
 	}
 	&.bgColor_2{
 		background-color:#5c5c5c;		
-	}
-	&.bgColor_3{
-		background-color: #ddd;
-		color: #2c496f;
 	}	
 }
+.bgColor_3{
+		background-color: #ddd;
+		color: #2c496f;
+	}
 .ta_l{
 	text-align:left !important;
 }
