--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -152,6 +152,10 @@ th{
 		background-color: #ddd;
 		color: #2c496f;
 }
+.bgColor_4{
+	background-color: #e9fcff !important;
+	color:#395971 !important;
+}
 .ta_l{
 	text-align:left !important;
 }
@@ -395,7 +399,65 @@ td {
   }
 }
 
+.sctable2 {
+	table{
+		table-layout: fixed;
+	}
+	th{
+		padding:0;
+	}
+	td{
+		padding:0;
+	}
+	.thead_wrap{
+		overflow:hidden;
+		width:100%;
+		>table{
+			>tbody {
+				>tr{
+					>td{
+						background-color:transparent;
+						border:none;
+						vertical-align:bottom;
+						th{
+							border:1px solid #efefef;
+							.btn_month{
+								width:100%;
+								height:100%;
+								border:none;
+								background-color:#aaa;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.tbody_wrap{
+		max-height:200px;
+		overflow-y:auto;
+		>table{
+			width:auto;
+			>tbody {
+				>tr{
+					>td{
+						vertical-align:top;
+						border-left:1px solid #dfdfdf;
 
+						th, td{
+							height:30px;
+							border:1px solid #dfdfdf;
+							border-top:none;
+						}
+						td{
+							background-color:#fff;
+						}
+					}
+				}
+			}
+		}
+	}
+}
 /*버튼*/
 form{
 	&.pos_r{
@@ -551,6 +613,7 @@ span {
 .plr_25{padding-left:25px;padding-right:25px;}
 .plr_30{padding-left:30px;padding-right:30px;}
 
+.ptb_3{padding-top:3px;padding-bottom:3px;}
 .ptb_5{padding-top:5px;padding-bottom:5px;}
 .ptb_10{padding-top:10px;padding-bottom:10px;}
 .ptb_15{padding-top:15px;padding-bottom:15px;}
