--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -612,6 +612,7 @@ span {
 .plr_20{padding-left:20px;padding-right:20px;}
 .plr_25{padding-left:25px;padding-right:25px;}
 .plr_30{padding-left:30px;padding-right:30px;}
+.plr_60{padding-left:60px;padding-right:60px;}
 
 .ptb_3{padding-top:3px;padding-bottom:3px;}
 .ptb_5{padding-top:5px;padding-bottom:5px;}
