[창호]전반적인수정

--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -107,20 +107,13 @@ input[type=text] {
 .table_caption {
     margin-bottom: 10px;
 }
-
-.green{
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background: green;
-  border-radius: 100%;
-  margin: 0 auto;
-}
-.red{
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background: red;
-  border-radius: 100%;
-  margin: 0 auto;
-}
+.row_box_wrap ul li+li+li .circle_rb {
+    display: block;
+    background-color: red;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    left: 45px;
+  }
